Fixed mismatching alignment

--- a/charitybot2/public_api/overlay/static/css/total.css
+++ b/charitybot2/public_api/overlay/static/css/total.css
@@ -1,12 +1,16 @@
 html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 #wrapper {
   position: relative;
+}
+
+.currency {
+  vertical-align: middle;
 }
 
 #overlay-text {
